=== 0.3.4

* Moved FcrepoAdmin::BlacklightHelperBehavior to FcrepoAdmin::Helpers::BlacklightHelperBehavior.
* FcrepoAdmin::ObjectsHelper method can now be easily overridden.

=== 0.3.3

* Audit trail functionality fails gracefully (i.e., if object does not implement ActiveFedora::Auditable)

=== 0.3.2

* Separated datastream and object context navigation menus.
* Added object helpers.

=== 0.3.1

* Object and datastream context nav menus added.
* Audit trail moved into objects controller.

== 0.3.0

* Feature: Permissions and inherited permissions added to object show view.

== 0.2.0

* Feature: Datastream content editing.

== 0.1.0

Initial release to RubyGems.
